app/styles/utilities.css
@import url('./variables.css');

/**
 * Utility classes for use by other classes.
 *
 * Usage:
 * `composes: className from '~app/styles/utilities.css'`
 */

.container {
  max-width: var(--lego-max-width);
  margin: 0 auto;
}

.contentContainer {
  composes: container;
  background: var(--color-white);
  padding: 40px;
  box-shadow: 0 1px 20px
    rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 5%);
  border-radius: 3px;

  @media (--small-viewport) {
    padding: 40px 10px;
  }
}

html[data-theme='dark'] .contentContainer {
  background: var(--lego-card-color);
}

.page {
  min-width: 75%;
}

.sidebar {
  min-width: 25%;

  /* TODO: Make this proper CSS for a general sidebar */
  min-height: 300px;
  padding: 20px 0 0 30px;
  margin: 0 0 0 60px;
  border-left: 1px solid #ccc;
  align-self: flex-end;
}

.withShadow {
  border: 1px solid rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 9%);
  box-shadow: 0 1px 4px rgba(var(--rgb-min), var(--rgb-min), var(--rgb-min), 4%);
  border-radius: 5px;
}

.editShadow {
  composes: withShadow;
  outline: none;
  box-shadow: 0 0 5px var(--color-mono-gray-3);
  border-color: var(--color-mono-gray-1);
}

.truncateString {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.hiddenOnMobile {
  @media (--small-viewport) {
    display: none !important;
  }
}

.hiddenOnDesktop {
  display: none;

  @media (--small-viewport) {
    display: flex;
  }
}

:global {
  /* stylelint-disable-next-line selector-class-pattern */
  .u-small {
    font-size: 14px;
  }

  /* stylelint-disable-next-line selector-class-pattern */
  .u-mb {
    margin-bottom: 15px;
  }

  /* stylelint-disable-next-line selector-class-pattern */
  .u-ui-heading {
    color: var(--color-gray-1);
    font-size: 1.1rem;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 2rem;
    margin-bottom: 0.8rem;

    @media (--mobile-device) {
      padding: 0;
      margin-bottom: 10px;
    }
  }
}

